<resources>
    <string name="app_name">Match App Neo 2019</string>

    <string name="welcome">Welcome</string>
    <string name="begin">Begin</string>
    <string name="submit">Submit</string>
    <string name="proceed">Proceed</string>

    <string name="no">No</string>
    <string name="none">None</string>
    <string name="cancel">Cancel</string>

    <string name="robot_position_indicator">This tablet is assigned to scout %1$s</string>

    <string name="rocket">Rocket</string>
    <string name="cs">Cargo Ship</string>

    <string name="sandstorm">Sandstorm</string>
    <string name="teleop">Tele-Op</string>
    <string name="end_game">End Game</string>
    <string name="match_global">Match Global</string>

    <string name="alliance_blue">Blue Alliance</string>
    <string name="alliance_red">Red Alliance</string>
    <string name="position_1">1</string>
    <string name="position_2">2</string>
    <string name="position_3">3</string>

    <string name="match_number_input">Match Number</string>
    <string name="robot_number_input">Robot Number</string>
    <string name="scouter_name_input">Scouter Name</string>

    <string name="match_number_error">Please enter a Match Number</string>
    <string name="robot_number_error">Please enter a Robot Number</string>
    <string name="scouter_name_error">Please enter your name</string>

    <string name="hab_input">Crossed baseline?</string>
    <string name="hab_l1">HAB Level 1</string>
    <string name="hab_l2">HAB Level 2</string>
    <string name="hab_l3">HAB Level 3</string>

    <string name="c_up">Cargo Picked Up</string>
    <string name="c_down">Cargo Dropped</string>
    <string name="h_up">Hatches Picked Up</string>
    <string name="h_down">Hatches Dropped</string>

    <string name="scsc">Sandstorm Cargo Ship</string>
    <string name="scr1">Level 1</string>
    <string name="scr2">Level 2</string>
    <string name="scr3">Level 3</string>
    <string name="scsh">Sandstorm Hatch Ship</string>
    <string name="shr1">Level 1</string>
    <string name="shr2">Level 2</string>
    <string name="shr3">Level 3</string>

    <string name="tcsc">Teleop Cargo Ship</string>
    <string name="tcr1">Level 1</string>
    <string name="tcr2">Level 2</string>
    <string name="tcr3">Level 3</string>
    <string name="tcsh">Teleop Hatch Ship</string>
    <string name="thr1">Level 1</string>
    <string name="thr2">Level 2</string>
    <string name="thr3">Level 3</string>

    <string name="hab_climb">HAB Climb</string>

    <string name="robot_condition">Robot Condition</string>
    <string name="broken_hc">Broken Hatch Collector</string>
    <string name="broken_cc">Broken Cargo Collector</string>
    <string name="broken_drive">Broken Drivetrain</string>
    <string name="broken_climb">Broken Climber</string>

    <string name="num_fouls">Number of Fouls</string>

    <string name="defense">Defense</string>
    <string name="played_defense">Played defense?</string>

    <string name="splash_message">&#128515;\nMade in Walpole, Massachusetts by Team 1153</string>

    <string name="restricted_area">Restricted Area</string>
    <string name="restricted_area_msg">This page contains settings that should only be adjusted at
        the discretion of a scouting representative. Do not continue unless you are told to do so.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
