<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/padding"
    android:paddingEnd="@dimen/padding"
    tools:context=".EndGameFragment">

    <TextView
        android:id="@+id/endGameHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_game"
        style="?android:attr/listSeparatorTextViewStyle"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/habClimbInputLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hab_climb"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/endGameHeader" />

    <RadioGroup
        android:id="@+id/habClimbInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/habClimbInputLabel">

        <RadioButton
            android:id="@+id/habClimbRadioNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/none" />

        <RadioButton
            android:id="@+id/habClimbRadioL1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hab_l1" />

        <RadioButton
            android:id="@+id/habClimbRadioL2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hab_l2" />

        <RadioButton
            android:id="@+id/habClimbRadioL3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hab_l3" />
    </RadioGroup>

    <TextView
        android:id="@+id/robotConditionInputLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/robot_condition"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habClimbInput" />

    <LinearLayout
        android:id="@+id/robotConditionInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/robotConditionInputLabel">

        <CheckBox android:id="@+id/brokenHc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/broken_hc" />

        <CheckBox android:id="@+id/brokenCc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/broken_cc" />

        <CheckBox android:id="@+id/brokenDrive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/broken_drive" />

        <CheckBox android:id="@+id/brokenClimb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/broken_climb" />
    </LinearLayout>

    <TextView
        android:id="@+id/numFoulsInputLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_fouls"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/robotConditionInput" />

    <com.walpolerobotics.scouting.matchappneo2019.widget.Counter
        android:id="@+id/numFoulsInput"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/numFoulsInputLabel" />

    <TextView
        android:id="@+id/playedDefenseInputLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defense"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numFoulsInput"/>

    <CheckBox
        android:id="@+id/playedDefenseInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/played_defense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/playedDefenseInputLabel"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/robotConditionInput"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>