<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/splash_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="@dimen/padding"
                android:text="@string/welcome"
                android:textAppearance="@style/TextAppearance.AppCompat.Inverse" />

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/matchNumberLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/matchNumberInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/match_number_input"
                            android:inputType="number"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/robotInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/robotInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/robot_number_input"
                            android:inputType="number"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/scouterNameInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/scouterNameInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                            android:hint="@string/scouter_name_input"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/robotPositionLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioGroup
                            android:id="@+id/allianceInput"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/allianceBlue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/alliance_blue" />

                            <RadioButton
                                android:id="@+id/allianceRed"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/alliance_red" />
                        </RadioGroup>

                        <RadioGroup
                            android:id="@+id/positionInput"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/position1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/position_1" />

                            <RadioButton
                                android:id="@+id/position2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/position_2" />

                            <RadioButton
                                android:id="@+id/position3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/position_3" />
                        </RadioGroup>
                    </LinearLayout>


                    <Button
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="begin"
                        android:text="@string/begin"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/scouterNameInputLayout" />

                    <android.support.text.emoji.widget.EmojiTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/splash_message" />
                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>